_sass/style.sass
$rounding: .5em

*
  box-sizing: border-box

.logo
  img
    display: inline
    margin-left: 0.5em
    padding: 10px
    width: 80px

.social
  margin: 0 1em
  a
    display: inline-block

.link img
  margin: .25em

main,
section
  transition: background .4s ease
  height: 100vh

.height-rendered
  main,
  section
    height: var(--app-height)



main
  overflow: auto
  scroll-snap-type: y proximity
  z-index: 2
  & > section
    position: relative
    scroll-snap-align: start
    h2
      font-weight: 600
      margin: 0 auto
      position: absolute
      text-align: center
      top: 0
      z-index: 1
    &:first-child:before
      content: ''
    &:last-child:after
      content: ''
    &:before
      content: url(../images/up.svg)
      top: 8vh
      transition: filter .7s ease
      .dark &
        filter: invert(1)
    &:after
      content: url(../images/down.svg)
      bottom: 7vh
    &:after,
    &:before
      z-index: 1

slider
  scroll-snap-align: start
  scroll-snap-type: x mandatory
  display: flex
  -webkit-overflow-scrolling: touch
  overflow-x: scroll
  & > section
    min-width: 100vw
    padding: 0 3em
    position: relative
    &:first-child:before
      content: ''
      z-index: 1
    &:last-child:after
      content: ''
    &:before
    &:after
      content: url(../images/right.svg)
      right: 9vw
    &:before
      content: url(../images/left.svg)
      left: 9vw

main,
slider
  & > section
    &:after,
    &:before
      opacity: .5
      font-family: system-ui
      font-size: 2em
      position: absolute
      animation: pulse 1s infinite

.x-learned
  slider > section
    &:after,
    &:before
      animation: none
      opacity: .2

.y-learned
  main > section
    &:after,
    &:before
      animation: none
      opacity: .2

section
  img
    max-width: 500px
    width: 100%
  align-items: center
  display: flex
  justify-content: center
  padding: 6em 0
  scroll-snap-align: start
  text-align: center
  &:not(.slider)
    padding: 10vh 1em
  & > header
    flex-direction: column
    top: 0
    *
      padding: 0 3em
    p
      margin-top: 3em

footer
  bottom: 0
  display: flex
  font-size: .9em
  justify-content: center
  letter-spacing: 1px
  padding: 0.5em 1em
  position: absolute
  text-align: center
  transition: color .7s ease
  width: 100%

label
  display: block
  margin-bottom: 2em

::placeholder
  color: #666

.input-wrapper
  display: inline
  position: relative
  text-align: left

input
  -webkit-appearance: none
  background: none
  border: none
  color: black
  font-family: inherit
  letter-spacing: 1px
  margin-bottom: 1em
  outline: none
  padding: 1em 0
  &[type=email],
    border-bottom: 2px solid black
    margin-top: 3em
  &[type=submit]
    cursor: pointer
    font-size: 2em
    letter-spacing: 5px
    padding: 0
    text-transform: uppercase
    transition: transform .1s ease
    vertical-align: sub
    &:hover
      transform: translateX(2px)
    &:active
      transform: translateX(5px)
  &:not(:placeholder-shown) ~ .floating-label
    top: -20px
    left: 0
    font-size: 11px
    opacity: 1

.input-text
  font-size: 14px
  height: 35px
  width: 200px

.floating-label
  opacity: .5
  position: absolute
  pointer-events: none
  left: 0
  top: 0
  transition: 0.2s ease all

@keyframes pulse
  0%
    transform: scale(0.9)
    opacity: .2
  70%
    transform: scale(1.5)
    opacity: .7
  100%
    transform: scale(1)
    opacity: .2

@supports (-webkit-touch-callout: none)
  main,
  section
    height: calc(100vh - 75px)

@media only screen and (max-width: 640px)
  body
    font-size: 13px
  main
    scroll-snap-type: y mandatory
  main > section h2
    top: 7px
  .stacked > *
    max-width: 90% !important
  .columns
    flex-direction: column
  h2
    letter-spacing: 2px
  .social img
    height: 20px
    width: 20px

.abv
  font-size: 1.5em
  margin: 0 0 .5em
  &:after
    content: '%'

.stacked
  flex-direction: column
  flex-wrap: wrap
  & > *
    max-width: 65%
  &.clear-height
    height: auto
    text-align: left

.columns
  flex-wrap: wrap
  justify-content: space-evenly
  row-gap: 10px
  column-gap: 20px

.last-slide
  background: black !important
  color: white
  font-size: 1.4em
  letter-spacing: 2px
  a
    color: #777

.charts
  max-height: 30%

header
  img,
  svg
    transition: filter .7s ease

footer *
  color: black
  transition: color .7s ease, text-decoration-color .4s ease

.dark
  header
    img,
    svg
      filter: invert(1)
  footer
    background: none
    a
      color: white

